# clipstack

./: AGENTS.md  Cargo.toml  README.md
.beads/: issues.jsonl
docs/: FEATURE_PLAN.md  IMPLEMENTATION_SPEC.md  UPGRADE_PLAN.md
scripts/: rcopy
src/: clipboard.rs  daemon.rs  main.rs  picker.rs  storage.rs  util.rs
systemd/: clipd.service
tests/: e2e_atomic_writes.sh  e2e_max_entries.sh  e2e_pinned.sh  e2e_preview.sh  e2e_search.sh
tests/integration/: test_component_interaction.sh  test_v11_features.sh
