[package]
name = "clipstack"
version = "0.1.0"
edition = "2024"
description = "Fast clipboard manager with lazy-loading history picker"
license = "MIT"

[[bin]]
name = "clipstack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
fuzzy-matcher = "0.3"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
